--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     </form>
 </header>
 
+<div class="card">
+    <h2 class="card-city">London <span>GB</span></h2>
+    <div class="card-weather">
+        <div class="card-value">11<sup>°c</sup> </div>
+        <img src="./images/example.png" alt="example">
+    </div>
+    <div class="card-description">Cloudy</div>
+</div>
+
 <script src="./scripts/main.js"></script>
 </body>
 </html>
